# haskell-functions

./: .gitignore  CHANGELOG.md  TODO.md  haskell-functions.cabal  hie.yaml  stack.yaml
app/: BinaryTree.hs  CardValidation.hs  Cipher.hs  Database.hs  DbProcessing.hs  Main.hs  VigenereCipher.hs
applicatives/: CHANGELOG.md  applicatives.cabal
applicatives/src/: CowExample.hs  Exercises.hs  Lists.hs
applicatives/test/: tests.hs
binary-tree/: CHANGELOG.md  binary-tree.cabal
binary-tree/src/: BinaryTree.hs
binary-tree/test/: tests.hs
card-validation/: CHANGELOG.md  card-validation.cabal
card-validation/app/: Main.hs
card-validation/src/: CardValidation.hs
card-validation/test/: test.hs
concurrency/: CHANGELOG.md  concurrency.cabal
concurrency/app/: Main.hs  TypesSafe.hs
doc/: datatypes.md  maybe-either.md
functor-code/: CHANGELOG.md  README.md  functor-code.cabal
functor-code/src/: Exercises.hs  FlipFunctor.hs  ReplaceExperiment.hs
functors/: README.md  functors.cabal
functors/src/: Exercises.hs  FunctionFunctor.hs  NaturalTransformation.hs
functors/test/: tests.hs
hangman/: hangman.cabal
hangman/app/: Main.hs
hangman/doc/: HLS-error.txt  README.md
hangman/src/: Ch13Exercises.hs  HangMan.hs
hangman/test/: tests.hs
haskell-functions/: TODO.md  haskell-functions.cabal
haskell-functions/app/: CardValidation.hs  DatabaseProcessing.hs  Main.hs  WordNumber.hs
haskell-functions/doc/: 01-folding.md  03-maybe-either.md  04-building-projects.md
json/: CHANGELOG.md  json.cabal
json/data/example1/: survey.json
json/src/: Example1.hs  Example2.hs
monad-transformers/: CHANGELOG.md  README.md  monad-transformers.cabal
monad-transformers/src/: MonadTransformers.hs
monads/: monads.cabal
monads/app/: Main.hs
monads/src/: BadMonad.hs  CowExample.hs  EitherMonadSoftwareShop.hs  Exercises.hs  KleisliComposition.hs
monads/test/: tests.hs
morse/: README.md  morse.cabal
morse/app/: Main.hs
morse/doc/: Chapter-Notes.md  Morse-Code.md  README.md
morse/src/: Morse.hs  WordNumber.hs
morse/test/: CoArbitrary.hs  WordNumberTest.hs  tests.hs
reader/: reader.cabal
reader/src/: PrettyReader.hs  Reader.hs  ReaderExample1.hs  ReaderExample2.hs
tic-tac-toe/: CHANGELOG.md  tic-tac-toe.cabal
tic-tac-toe/app/: Main.hs
unicode-tables/: CHANGELOG.md  README.md  unicode-tables.cabal
unicode-tables/app/: Main.hs
unicode-tables/data/: ranges.txt
