cabal-version:      2.4
name:               haskell-functions 
version:            2.4

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-functions
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      BinaryTree
      CardValidation
      Cipher
      Database
      WordNumber
      VigenereCipher
      
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.14.3.0,
      time ^>=1.9.3
    hs-source-dirs:   app
    default-language: Haskell2010
