cabal-version:      2.4
name:               binary-tree
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable binary-tree
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:
    ghc-options:
    hs-source-dirs:   src
    build-depends:    base >= 4.7 && <5
    default-language: Haskell2010

test-suite binary-tree-test
    type:             exitcode-stdio-1.0
    main-is:          tests.hs
    other-modules:
    hs-source-dirs:   test, src
    ghc-options:
    build-depends:    base >= 4.7 && <5
                    , QuickCheck
    default-language: Haskell2010 
