cabal-version:      2.4
name:               card-validation
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable card-validation
  main-is:            Main.hs
  other-modules:      CardValidation

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:      base >= 4.7 && <5
  hs-source-dirs:     app, src
  default-language:   Haskell2010

library
  exposed-modules:    CardValidation
--ghc-options:        -Wall -fwarn-tabs
  other-modules:
  hs-source-dirs:     src
  build-depends:      base >= 4.7 && <5
  default-language:   Haskell2010

test-suite card-validation-test
  type:               exitcode-stdio-1.0
  main-is:            test.hs
  other-modules:      CardValidation
  hs-source-dirs:     test, src
--ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >= 4.7 && <5
                    , hspec
                    , QuickCheck
