cabal-version:      2.4
name:               concurrency
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable concurrency
    main-is:          Main.hs
    other-modules:    TypesSafe
    other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , aeson
                    , async
                    , bytestring
                    , containers
                    , lens
                    , lens-aeson
                    , random
                    , stm
                    , text
                    , wreq
    hs-source-dirs:   app
    default-language: Haskell2010
