cabal-version:       2.4
name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman 
-- description:
homepage:            https://github.com/githubuser/hangman#readme
--license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      app, src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Ch13Exercises
                     , HangMan  
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

library
  exposed-modules:     HangMan
  ghc-options:         -Wall -fwarn-tabs
  other-modules:
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  other-modules:       HangMan 
  hs-source-dirs:      test, src
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && <5
                     , hspec
                     , QuickCheck
                     , random
                     , split
  default-language: Haskell2010

