cabal-version:      2.4
name:               json
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable json
    main-is:          Main.hs
    other-modules:    Example1
                      -- derive Generic example 
                    , Example2 
    other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:  Example1 
                      -- derived Generic example
                    , Example2
    ghc-options:
    hs-source-dirs:   src
    build-depends:    base ^>=4.15.1.0
                    , aeson
                    , bytestring
                    , http-conduit
                    , raw-strings-qq
                    , text
                    , trifecta
                    , utf8-string 
    default-language: Haskell2010